Fixed collector.